# data-palestine

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug-report.md  data-correction.md  feature-request.md
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: alembic.ini
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  dataset.py  geography.py  indicator.py  observation.py  source.py
apps/api/app/routers/: __init__.py  curation.py  datasets.py  export.py  geographies.py  indicators.py  observations.py  sources.py
apps/api/app/schemas/: common.py  dataset.py  geography.py  indicator.py  observation.py  source.py
apps/api/app/utils/: pagination.py
apps/api/tests/: conftest.py  test_datasets.py  test_indicators.py  test_observations.py
apps/web/: Dockerfile  i18n.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
docker/: Caddyfile  Dockerfile.api  Dockerfile.web  docker-compose.prod.yml
docs/: API_REFERENCE.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOYMENT.md  EXTRACTION_STRATEGY.md  PROJECT_SPEC.md  api-guide.md  contributing.md  methodology.md  pcbs_datasets.md
docs/archive/: IMPLEMENTATION_GUIDE.md
scripts/: fix_dataset_names.py  init_production.sh  setup_server.sh  verify_accuracy.py
(+45 files in other folders)
